--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -816,8 +816,8 @@
     "description": "Closes all tabs to the left side, excluding pinned tabs."
   },
   "commandDescriptionCloseOtherTabs": {
-    "message": "Close all tabs except of the current tab and pinned tabs.",
-    "description": "Close all tabs except of the current tab and pinned tabs."
+    "message": "Closes all tabs except of the current tab and pinned tabs.",
+    "description": "Closes all tabs except of the current tab and pinned tabs."
   },
   "commandDescriptionSaveTabAsPDF": {
     "message": "Saves the current page as a pdf file.",
