New Crowdin translations (#318)
Added new crowdin translations

--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -180,7 +180,7 @@
     "description": "Display update notification"
   },
   "settingDescriptionMouseButton": {
-    "message": "The mouse button which triggers the gesture.",
+    "message": "Tlačítko myši, které spustí gesto.",
     "description": "The mouse button which triggers the gesture."
   },
   "settingDescriptionTimeoutActive": {
@@ -240,7 +240,7 @@
     "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
   },
   "settingDescriptionUpdateNotification": {
-    "message": "Shows a notification when Gesturefy is updated.",
+    "message": "Zobrazit oznámení po aktualizaci Gesturefy.",
     "description": "Shows a notification when Gesturefy is updated."
   },
   "gestureLabelInformation": {
@@ -300,11 +300,11 @@
     "description": "Add URL match patterns to disable Gesturefy for certain websites. The match pattern allows \"*\" wildcards and must be in the form of <scheme>:\/\/<host><path>."
   },
   "blacklistPlaceholderURL": {
-    "message": "Enter URL match pattern",
+    "message": "Zadejte vzor pro URL",
     "description": "Enter URL match pattern"
   },
   "blacklistNotificationAlreadyExists": {
-    "message": "URL pattern already exists.",
+    "message": "Vzor URL adresy již existuje.",
     "description": "URL pattern already exists."
   },
   "blacklistHintNoEntries": {
@@ -372,11 +372,11 @@
     "description": "New tab"
   },
   "commandLabelReloadTab": {
-    "message": "Reload tab",
+    "message": "Obnovit panel",
     "description": "Reload tab"
   },
   "commandLabelReloadFrame": {
-    "message": "Reload frame",
+    "message": "Obnovit rámec stránky",
     "description": "Reload frame"
   },
   "commandLabelStopLoading": {
@@ -384,7 +384,7 @@
     "description": "Stop loading"
   },
   "commandLabelCloseTab": {
-    "message": "Close tab",
+    "message": "Zavře panel",
     "description": "Close tab"
   },
   "commandLabelRestoreTab": {
@@ -436,23 +436,23 @@
     "description": "Scroll page up"
   },
   "commandLabelFocusRightTab": {
-    "message": "Focus right tab",
+    "message": "Přepnout na pravý panel",
     "description": "Focus right tab"
   },
   "commandLabelFocusLeftTab": {
-    "message": "Focus left tab",
+    "message": "Přepnout na levý panel",
     "description": "Focus left tab"
   },
   "commandLabelFocusFirstTab": {
-    "message": "Focus first tab",
+    "message": "Přepnout na první panel",
     "description": "Focus first tab"
   },
   "commandLabelFocusLastTab": {
-    "message": "Focus last tab",
+    "message": "Přepnout na poslední panel",
     "description": "Focus last tab"
   },
   "commandLabelFocusPreviousSelectedTab": {
-    "message": "Focus previous selected tab",
+    "message": "Přepnout na naposledy vybraný panel",
     "description": "Focus previous selected tab"
   },
   "commandLabelMaximizeWindow": {
@@ -504,19 +504,19 @@
     "description": "Decrease URL number"
   },
   "commandLabelOpenImageInNewTab": {
-    "message": "Open image in new tab",
+    "message": "Otevřít obrázek v novém panelu",
     "description": "Open image in new tab"
   },
   "commandLabelOpenLinkInNewTab": {
-    "message": "Open link in new tab",
+    "message": "Otevřít odkaz v novém panelu",
     "description": "Open link in new tab"
   },
   "commandLabelOpenLinkInNewWindow": {
-    "message": "Open link in new window",
+    "message": "Otevřít odkaz v novém okně",
     "description": "Open link in new window"
   },
   "commandLabelOpenLinkInNewPrivateWindow": {
-    "message": "Open link in new private window",
+    "message": "Otevřít odkaz v novém soukromém okně",
     "description": "Open link in new private window"
   },
   "commandLabelSearchTextSelection": {
@@ -556,11 +556,11 @@
     "description": "Open homepage"
   },
   "commandLabelOpenCustomURLInNewTab": {
-    "message": "Open custom URL in new tab",
+    "message": "Otevřít vlastní URL do nového panelu",
     "description": "Open custom URL in new tab"
   },
   "commandLabelOpenCustomURL": {
-    "message": "Open custom URL",
+    "message": "Otevřít vlastní URL",
     "description": "Open custom URL"
   },
   "commandLabelPasteClipboard": {
@@ -584,7 +584,7 @@
     "description": "Open link"
   },
   "commandLabelViewImage": {
-    "message": "View image",
+    "message": "Zobrazit obrázek",
     "description": "View image"
   },
   "commandLabelLinkToNewBookmark": {
@@ -928,7 +928,7 @@
     "description": "previous"
   },
   "commandSettingLabelTabNextFocusNext": {
-    "message": "next",
+    "message": "další",
     "description": "next"
   },
   "commandSettingLabelTabNextFocusRecently": {
@@ -1138,6 +1138,10 @@
   "gesturePopupDescriptionOptionalLabel": {
     "message": "Assign a custom name that will be displayed instead of the command name.",
     "description": "Assign a custom name that will be displayed instead of the command name."
+  },
+  "gesturePopupSaveButton": {
+    "message": "Save",
+    "description": "Save"
   },
   "gesturePopupDirectionsNotificationDuplicate": {
     "message": "This gesture is already in use by \"$COMMAND$\".",
